--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <div class="project-card">
                 
                 <div class="project-img">
-                    <img class="project-pic" src="project3.PNG" alt="project4">
+                    <img class="project-pic" src="https://www.freepnglogos.com/uploads/picture-logo-png/picture-amazon-logo-15.png" alt="project4">
                 </div>
                 <div class="project-info">
                     <h1 class="project-name">Amazon Clone</h1>
